--- a/nx.json
+++ b/nx.json
@@ -17,6 +17,10 @@
   "targetDefaults": {
     "build": {
       "dependsOn": ["^build"]
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "dependsOn": ["^build"]
     }
   }
 }
