--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -30,7 +30,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
+    "rxjs": "7.8.2",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -39,6 +39,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@nx/jest": "20.4.6",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
