--- a/shared/package.json
+++ b/shared/package.json
@@ -15,9 +15,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "7.8.2"
   },
   "devDependencies": {
+    "@nx/jest": "20.4.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.6",
