--- a/services/user-service/.env
+++ b/services/user-service/.env
@@ -3,3 +3,6 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASS=postgres
 DB_NAME=optifit
+JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRATION=1h
+JWT_REFRESH_EXPIRATION=7d
